--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,11 +1,12 @@
 <!-- _includes/projects.html -->
 <div class="grid-sizer"></div>
 <div class="grid-item">
-  {% if project.redirect -%}
+  <!-- {% if project.redirect -%}
   <a href="{{ project.redirect }}">
-    {%- else -%}
-    <a href="{{ project.url | relative_url }}">
-      {%- endif %}
+    {%- else -%} -->
+    <!-- <a href="{{ project.url | relative_url }}"> -->
+    <a href="{{ project.link }}">
+        <!-- {%- endif %} -->
       <div class="card hoverable">
         {%- if project.img %}
         {%- include figure.html
@@ -13,7 +14,7 @@
           alt="project thumbnail" -%}
         {%- endif %}
         <div class="card-body">
-          <h2 class="card-title text-lowercase">{{ project.title }}</h2>
+          <h2 class="card-title ">{{ project.title }}</h2>
           <p class="card-text">{{ project.description }}</p>
           <div class="row ml-1 mr-1 p-0">
             {%- if project.github -%}
