small modifications and improvements.

--- a/_includes/projects_horizontal.html
+++ b/_includes/projects_horizontal.html
@@ -6,14 +6,7 @@
   {%- endif -%}
     <div class="card hoverable">
       <div class="row g-0">
-        {%- if project.img -%}
-        <div class="card-img col-md-6">
-          {% include figure.html path=project.img alt="project thumbnail" %}
-        </div>
-        <div class="col-md-6">
-        {%- else -%}
-        <div class="col-md-12">
-        {%- endif -%}
+        <div class="col-md-8">
           <div class="card-body">
             <h3 class="card-title text-lowercase">{{ project.title }}</h3>
             <p class="card-text">{{ project.description }}</p>
@@ -33,6 +26,13 @@
               {%- endif -%}
             </div>
           </div>
+        </div>
+        <div class="col-md-4"> 
+          {%- if project.img -%}
+          <div class="card-img">
+            {% include figure.html path=project.img alt="project thumbnail" style="width: 100%; height: 200px;" %}
+          </div>
+          {%- endif -%}
         </div>
       </div>
     </div>
