--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -5,7 +5,11 @@ layout: default
         <div class="post">
 
           <header class="post-header">
-            <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i></a>{% endif %}</h1>
+            <h1 class="post-title">{{ page.title }}</h1>
+            <h6>{% if page.resume_pdf %}<a href="{{ page.resume_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i>Download Professional Resume</a>{% endif %}</h6>
+            <br>
+            <h6>{% if page.academic_cv_pdf %}<a href="{{ page.academic_cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fas fa-file-pdf"></i>Download Academic CV (Work In Progress)</a>{% endif %}</h6>
+            <br>
             <p class="post-description">{{ page.description }}</p>
           </header>
 
