--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,6 +33,22 @@ layout: default
               {{ page.profile.address }}
             </div>
             {%- endif %}
+
+          {%- if page.profile.uni_image %}
+            {%- assign uni_image_path = page.profile.uni_image | prepend: 'assets/img/' -%}
+
+            {% if page.profile.uni_image_circular %}
+              {%- assign uni_image_class = "img-fluid z-depth-1 rounded-circle" -%}
+            {% else %}
+              {%- assign uni_image_class = "img-fluid z-depth-1 rounded" -%}
+            {% endif %}               
+
+            {% include figure.html
+            path=uni_image_path
+            class=uni_image_class
+            alt=page.profile.uni_image -%}
+          {% endif -%}
+
           </div>
           {%- endif %}
 
